--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "./path.tsconfig.json",
   "compilerOptions": {
     "target": "es5",
     "lib": [
@@ -19,10 +20,10 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": "./",
-    "paths": {
-      "@": ["src/"]
-    }
+    // "baseUrl": "./",
+    // "paths": {
+    //   "@": ["src/"]
+    // }
   },
   "include": [
     "src",
