--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@mantine/core": "^5.9.2",
+    "@mantine/form": "^5.10.2",
     "@mantine/hooks": "^5.9.2",
     "@tabler/icons": "^1.116.1",
     "@testing-library/jest-dom": "^5.14.1",
@@ -14,6 +15,8 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "http-proxy-middleware": "^2.0.6",
+    "lodash": "^4.17.21",
     "qs": "^6.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -48,6 +51,7 @@
   },
   "devDependencies": {
     "@craco/craco": "^7.0.0",
+    "@types/lodash": "^4.14.191",
     "@typescript-eslint/eslint-plugin": "^5.46.0",
     "@typescript-eslint/parser": "^5.46.0",
     "eslint": "^8.29.0",
