--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "@mantine/core": "^5.9.2",
     "@mantine/form": "^5.10.2",
     "@mantine/hooks": "^5.9.2",
+    "@mantine/notifications": "^5.10.2",
     "@tabler/icons": "^1.116.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/crypto-js": "^4.1.1",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "crypto-js": "^4.1.1",
     "http-proxy-middleware": "^2.0.6",
     "lodash": "^4.17.21",
     "qs": "^6.11.0",
