--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@types/crypto-js": "^4.1.1",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
     "crypto-js": "^4.1.1",
     "http-proxy-middleware": "^2.0.6",
     "lodash": "^4.17.21",
@@ -25,7 +25,10 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1",
     "typescript": "^4.4.2",
+    "use-immer": "^0.9.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
