--- a/package.json
+++ b/package.json
@@ -12,14 +12,10 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "@types/crypto-js": "^4.1.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
-    "@types/react": "^18.2.6",
-    "@types/react-dom": "^18.2.4",
     "crypto-js": "^4.1.1",
     "http-proxy-middleware": "^2.0.6",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "qs": "^6.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -57,8 +53,14 @@
   },
   "devDependencies": {
     "@craco/craco": "^7.0.0",
+    "@types/crypto-js": "^4.1.1",
+    "@types/jest": "^27.0.1",
     "@types/lodash": "^4.14.191",
+    "@types/node": "^16.7.13",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
     "@types/react-router-dom": "^5.3.3",
+    "@types/webpack-env": "^1.18.0",
     "@typescript-eslint/eslint-plugin": "^5.46.0",
     "@typescript-eslint/parser": "^5.46.0",
     "eslint": "^8.29.0",
