--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/webpack-env": "^1.18.0",
     "@typescript-eslint/eslint-plugin": "^5.46.0",
     "@typescript-eslint/parser": "^5.46.0",
+    "copy-webpack-plugin": "^11.0.0",
     "eslint": "^8.29.0",
     "eslint-plugin-react": "^7.31.11"
   }
