--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "cross-env": "^7.0.3",
     "crypto-js": "^4.1.1",
     "http-proxy-middleware": "^2.0.6",
     "lodash": "^4.17.21",
@@ -29,9 +30,12 @@
   },
   "scripts": {
     "start": "craco start",
+    "start:prod": "cross-env REACT_APP_ENV=production react-scripts start",
     "build": "craco build",
+    "build:prod": "cross-env REACT_APP_ENV=production react-scripts build",
     "test": "craco test",
-    "eject": "craco eject"
+    "eject": "craco eject",
+    "build:dev": "cross"
   },
   "eslintConfig": {
     "extends": [
